<resources>
    <string name="app_name">Gestor_de_inventario_personal_Luengo_Gomez_Alejandro</string>
    <string name="tvNombre">Nombre de la pertenencia</string>
    <string name="tvCategoria">Categoría de la pertenencia</string>
    <string name="tvUnidades">Número de unidades</string>
    <string name="tvPesoUnidad">Peso por unidad</string>
    <string name="tvDimensiones">Dimensiones</string>
    <string name="tvValorPorUnidad">Precio por unidad</string>
    <string name="fechaCompra">Fecha de la compra: </string>
    <string name="tvFechaSeleccionada">Seleccionar fecha</string>
    <string name="cbFragil">Frágil</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="fabAniadirPertenencia">Añadir Pertenencia</string>
    <!-- AddPertenencia, se repiten los elementos pero los pongo por si acaso -->
    <string name="etNombre">Nombre de la pertenencia</string>
    <string name="etCategoria">Categoría</string>
    <string name="etUnidades">Unidades</string>
    <string name="etPeso">Peso por unidad (kg)</string>
    <string name="etDimensiones">Dimensiones (ancho*alto*largo)</string>
    <string name="checkBoxFragil">¿Es el objeto frágil?</string>
    <string name="etValor">Valor por unidad (€) (opcional)</string>
    <string name="btnFecha">Seleccionar fecha</string>
    <string name="btnGuardar">Guardar</string>

    <string name="seleccionarFecha">Seleccionar fecha</string>



</resources>