<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pertenencias_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- android:background="@drawable/fondo" aquí puedo añadir un fondo personalizado a la tarjeta -->

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombre"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCategoria"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvDimensiones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDimensiones"
            android:textSize="14sp"/>

        <!-- Línea divisoria -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#CCCCCC"/>

        <!-- Esto lo muestro horizontalmente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <!-- weightSum reparte el espacio entre los componentes en función de cuanto peso les des -->

            <TextView
                android:id="@+id/tvUnidades"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvUnidades"
                android:textSize="14sp"/>
            <!-- Les quito el layout_width para que lo gestione el layout_weight -->

            <TextView
                android:id="@+id/tvPesoUnidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvPesoUnidad"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvValorUnidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvValorPorUnidad"
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/cbFragil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbFragil"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- En este layout muestro el TextView de la fecha de compra y el DatePicker-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/fechaCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaCompra"
                android:textSize="14sp"
                android:layout_marginEnd="8dp"/>

            <!-- Mejor usar DatePickerDialog en código que un DatePicker aquí-->
            <TextView
                android:id="@+id/tvFechaSeleccionada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:hint="@string/tvFechaSeleccionada"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/btnEditar"/>

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEliminar"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>